<resources>
    <string name="app_name">SavAge</string>
    <string name="log_email">Email</string>
    <string name="log_password">Password</string>
    <string name="login">Login</string>
    <string name="registra_nuovo">Registra Nuovo</string>
    <string name="non_hai_account">Non hai account</string>
    <string name="avatar_image">Avatar image</string>
    <string name="nome_user">Nome</string>
    <string name="citta_user">Citta</string>
    <string name="via_user">Via</string>
    <string name="numeroC_user">N Civico</string>
    <string name="sesso_femmina">F</string>
    <string name="sesso_maschio">M</string>
    <string name="num_tel_user">N.Telefono</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="cancelled">Cancel</string>
    <string name="info_user">INFO</string>
    <string name="statistica_user">STATISTICA</string>
    <string name="patene_user">PARENTE</string>
    <string name="widget_user">WIDGET</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_today">Oggi</string>
    <string name="ok">OK</string>
</resources>
