<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrazione" >




    <ImageView
        android:id="@+id/imgAvatarReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/avatar_image"
        tools:src="@tools:sample/avatars[2]" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:id="@+id/emailRegLayout"
        android:layout_width="match_parent"
        android:layout_below="@id/imgAvatarReg"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmailReg"
            android:hint="@string/log_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:id="@+id/nomeRegLayout"
        android:layout_width="match_parent"
        android:layout_below="@id/emailRegLayout"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNomeReg"
            android:hint="@string/nome_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <RadioGroup
        android:id="@+id/rdbGroupSessoReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rdbMaschioReg"
        android:layout_below="@id/nomeRegLayout"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbMaschioReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sesso_maschio"/>
        <RadioButton
            android:id="@+id/rdbFemminaReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sesso_femmina"/>
    </RadioGroup>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dataNasciataRegLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rdbGroupSessoReg"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDataNascitaReg"
            android:hint="Data di nascita"
            android:layout_margin="4dp"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:id="@+id/numTelRegLayout"
        android:layout_width="match_parent"
        android:layout_below="@id/dataNasciataRegLayout"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNumTelReg"
            android:hint="@string/num_tel_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="10dp"
        android:id="@+id/passwordRegLayout"
        android:layout_width="match_parent"
        android:layout_below="@id/numTelRegLayout"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPasswordReg"
            android:hint="@string/log_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:id="@+id/passwordRepeatRegLayout"
        android:layout_width="match_parent"
        android:layout_below="@id/passwordRegLayout"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editpasswordRepeatReg"
            android:hint="@string/repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.button.MaterialButton

        android:id="@+id/btnNewRegisterReg"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordRepeatRegLayout"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/registra_nuovo" />

</RelativeLayout>