<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/avatar_image"
        tools:src="@tools:sample/avatars[2]" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/SavAgeTextInputLayout"
        android:id="@+id/emailLogLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgAvatar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/log_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmailLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/emailLogLayout"
            android:layout_alignBottom="@+id/emailLogLayout"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/SavAgeTextInputLayout"
        android:id="@+id/passwordLogLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLogLayout"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/log_password"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPasswordLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLogLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/login" />



   <!-- <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNewVersion"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/cancelled" />
         -->

    <Button
        android:id="@+id/btnNewRegister"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/registra_nuovo" />


    <TextView
        android:id="@+id/txtVNewRegister"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnNewRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="166dp"
        android:text="@string/non_hai_account"
        android:textAlignment="center"
        android:textStyle="bold" />
</RelativeLayout>